--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   equatable: ^2.0.3
   validators: ^3.0.0
   cloud_firestore: ^3.4.1
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
