--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   validators: ^3.0.0
   cloud_firestore: ^3.4.1
   google_fonts: ^3.0.1
+  flutter_screenutil: ^5.5.3+2
 
 dev_dependencies:
   flutter_test:
