--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^3.4.1
   google_fonts: ^3.0.1
   flutter_screenutil: ^5.5.3+2
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
