--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_screenutil: ^5.5.3+2
   flutter_spinkit: ^5.1.0
+  social_login_buttons: ^1.0.6+2
 
 dev_dependencies:
   flutter_test:
