[development] clean code, make code more reusable

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -6,6 +6,8 @@
 	<string>518046285186-82he3dt7aaku3ivv21pqsb9hp87ipp9e.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
 	<string>com.googleusercontent.apps.518046285186-82he3dt7aaku3ivv21pqsb9hp87ipp9e</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>518046285186-n46tbhm1udbtc0vut55fqsal7sl20rni.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyDBjHOkt_n9Rr-Y9Hvo3U9-t-NPzn1vs-8</string>
 	<key>GCM_SENDER_ID</key>
