--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_screenutil: ^5.5.3+2
   flutter_spinkit: ^5.1.0
   social_login_buttons: ^1.0.6+2
+  google_sign_in: ^5.4.0
 
 dev_dependencies:
   flutter_test:
