--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   social_login_buttons: ^1.0.6+2
   google_sign_in: ^5.4.0
+  persistent_bottom_nav_bar: ^4.0.2
 
 dev_dependencies:
   flutter_test:
