--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   social_login_buttons: ^1.0.6+2
   google_sign_in: ^5.4.0
   persistent_bottom_nav_bar: ^4.0.2
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
