--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   google_sign_in: ^5.4.0
   persistent_bottom_nav_bar: ^4.0.2
   cached_network_image: ^3.2.1
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
