--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   persistent_bottom_nav_bar: ^4.0.2
   cached_network_image: ^3.2.1
   animated_text_kit: ^4.2.2
+  flame: ^1.3.0
+  sensors_plus: ^1.3.4+1
 
 dev_dependencies:
   flutter_test:
