--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -30,7 +30,7 @@ linter:
     use_string_in_part_of_directives: true
 
     # Pub Rules:
-    sort_pub_dependencies: true
+    sort_pub_dependencies: false
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
